[metadata]
name = gym-notices-farama-foundation
version = 0.0.2
author = Farama Foundation
author_email = contact@farama.org
description = Notices for gym
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Farama-Foundation/gym-notices
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src